--- a/src/index.css
+++ b/src/index.css
@@ -37,6 +37,7 @@
   padding: 1em;
   margin-top: 20px;
   display: flex;
+  position: absolute;
 }
 
 .border{
@@ -89,4 +90,9 @@
   box-shadow: 0px 15px 20px rgba(46, 229, 157, 0.4);
 }
 
-
+.googleMap{
+  width: 50%;
+  height: 500px;
+  padding: 1em;
+  position: relative;
+}
