--- a/src/index.css
+++ b/src/index.css
@@ -36,8 +36,6 @@
   margin-top: 20px;
   padding: 1em;
   margin-top: 20px;
-  display: flex;
-  position: absolute;
 }
 
 .border{
@@ -53,12 +51,25 @@
   width: 50%;
   height: 500px;
   background: wheat;
-  display: table-cell;
+  border: 1px solid black;
   border-radius: 15px;
-  vertical-align: middle;
   text-align: center;
-  display: inline-block;
+  margin: 0 auto;
 } 
+
+.underline{
+  margin-top: 15px;
+  width: 90%;
+  margin-left: auto;
+  margin-right: auto;
+  border-bottom: 1px solid #000;
+  font-style: inherit;
+}
+
+.h1Style{
+  font-size: 30px;
+  font-style: inherit;
+}
 
 .measurementsUL {
   list-style-type: none;
@@ -80,7 +91,7 @@
 .pannelBtn{
   height: 50px;
   width: auto;
-  margin: 20px;
+  margin: 20px 20px;
   font-size: 15px;
   cursor: pointer;
   background: rgb(84, 192, 84);
@@ -93,9 +104,24 @@
   box-shadow: 0px 15px 20px rgba(46, 229, 157, 0.4);
 }
 
+.usePannel h2{
+  text-decoration: underline;
+}
+
+.usePannel{
+  width: 30%;
+  text-align:center;
+  height: auto;
+  margin: 20px auto;
+}
+
 .googleMap{
   width: 50%;
   height: 500px;
   padding: 1em;
   position: relative;
+}
+
+h2{
+  margin: 0px !important;
 }
