--- a/src/index.css
+++ b/src/index.css
@@ -116,9 +116,10 @@
 }
 
 .googleMap{
-  width: 50%;
-  height: 500px;
+  width: 80%;
+  height: 100%;
   padding: 1em;
+  margin: 0 auto;
   position: relative;
 }
 
@@ -126,91 +127,35 @@ h2{
   margin: 0px !important;
 }
 
-.pin {
-  width: 30px;
-  height: 30px;
-  border-radius: 50% 50% 50% 0;
-  background: #00cae9;
-  position: absolute;
-  transform: rotate(-45deg);
-  left: 50%;
-  top: 50%;
-  margin: -20px 0 0 -20px;
-}
-.pin:after {
-  content: "";
-  width: 14px;
-  height: 14px;
-  margin: 8px 0 0 8px;
-  background: #e6e6e6;
-  position: absolute;
-  border-radius: 50%;
+.aNav{
+  margin-left: 50px;
+  margin-right: 50px;
+  text-decoration: none;
+  font-size: 40px;
+  font-family: 'Courier New', Courier, monospace;
+  color: green;
+  border: 1px solid black;
+  padding: 0.2em;
+  border-radius: 15px;
+  background: greenyellow;
 }
 
-.bounce {
-  animation-name: bounce;
-  animation-fill-mode: both;
-  animation-duration: 1s;
+.h1Loading{
+  text-align: center;
 }
 
-.pulse {
-  background: #d6d4d4;
-  border-radius: 50%;
-  height: 14px;
-  width: 14px;
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  margin: 11px 0px 0px -12px;
-  transform: rotateX(55deg);
-  z-index: -2;
-}
-.pulse:after {
-  content: "";
-  border-radius: 50%;
-  height: 40px;
-  width: 40px;
-  position: absolute;
-  margin: -13px 0 0 -13px;
-  animation: pulsate 1s ease-out;
-  animation-iteration-count: infinite;
-  opacity: 0;
-  box-shadow: 0 0 1px 2px #00cae9;
-  animation-delay: 1.1s;
+.requestDronesMap{
+  margin:0 auto !important;
 }
 
-@keyframes pulsate {
-  0% {
-    transform: scale(0.1, 0.1);
-    opacity: 0;
-  }
-
-  50% {
-    opacity: 1;
-  }
-
-  100% {
-    transform: scale(1.2, 1.2);
-    opacity: 0;
-  }
+.test{
+  text-align:center;
 }
 
-@keyframes bounce {
-  0% {
-    opacity: 0;
-    transform: translateY(-2000px) rotate(-45deg);
-  }
-
-  60% {
-    opacity: 1;
-    transform: translateY(30px) rotate(-45deg);
-  }
-
-  80% {
-    transform: translateY(-10px) rotate(-45deg);
-  }
-
-  100% {
-    transform: translateY(0) rotate(-45deg);
-  }
+.separator{
+    width: 90%;
+    margin: 0 auto;
+    border: 1px solid black;
+    margin-bottom: 50px;
 }
+
